Spacing Fix 2

--- a/media/benmeller-screen.css
+++ b/media/benmeller-screen.css
@@ -239,7 +239,8 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
 	column-gap: 10%;
-	justify-content: space-between;
+	/*justify-content: space-between;*/
+	justify-content: start;
 }
 
 div.item {
